Modifiers with use_apply_on_spline = True do not work on curve with shapekeys #30561

Closed
opened 2012-03-16 10:07:56 +01:00 by Julien Rivaud · 3 comments

%%%The attached scene has been made by:
- Loading factory defaults
- Removing every object
- Adding a plane mesh, scaled to 5
- Adding a curve path, translated x=0 y=0 z=4, with extrusion=1
- Putting a shrinkwrap modifier on the curve with target the plane
- Adding a shapekey to the curve

Expected behaviour:

  The curve handles are projected on the plane.
  The strip generated by curve extrusion is intersecting the plane with an angle of 90°

Actual results:

  The curve and generated strip stay in place
   

If I disable use_apply_on_spline, the modifier works (of course one doesn't see much because the generated surface is orthogonal to the plane thus projects onto a line).
If I toggle edit mode on the curve, the modifier temporarily works (I see the expected result while in edit mode)
If I remove the shape key, it also works.

Note that the extrusion is not needed to trigger the bug. It just makes it more visible, and problematic (without extrusion I don't care about use_apply_on_spline being True or not)%%%

%%%The attached scene has been made by: - Loading factory defaults - Removing every object - Adding a plane mesh, scaled to 5 - Adding a curve path, translated x=0 y=0 z=4, with extrusion=1 - Putting a shrinkwrap modifier on the curve with target the plane - Adding a shapekey to the curve Expected behaviour: ``` The curve handles are projected on the plane. The strip generated by curve extrusion is intersecting the plane with an angle of 90° ``` Actual results: ``` The curve and generated strip stay in place ``` If I disable use_apply_on_spline, the modifier works (of course one doesn't see much because the generated surface is orthogonal to the plane thus projects onto a line). If I toggle edit mode on the curve, the modifier temporarily works (I see the expected result while in edit mode) If I remove the shape key, it also works. Note that the extrusion is not needed to trigger the bug. It just makes it more visible, and problematic (without extrusion I don't care about use_apply_on_spline being True or not)%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev44921. Thanks for the report, closing.%%%

%%%Fixed in svn rev44921. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30561
No description provided.