Fix #30561 Modifiers with use_apply_on_spline = True do not work on curve with shapekeys